tests/invalid/do/i09_do_undeclared_var.f
program baddo
  integer soma
  soma = 0
  do 10 i = 1, 5
    soma = soma + i
10 continue
  print *, soma
end
